<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menu_home"
        android:id="@+id/home"
        android:icon="@drawable/nav_home"
        />
    <item android:title="@string/menu_players_list"
        android:id="@+id/playersList"
        android:icon="@drawable/nav_list"
        />
    <item android:title="@string/menu_gameroom"
        android:id="@+id/gameroom"
        android:icon="@drawable/nav_gameroom"
        />
    <item android:title="@string/menu_transactions"
        android:id="@+id/transactions"
        android:icon="@drawable/nav_transaction"
        />
    <item android:title="@string/menu_settings"
        android:id="@+id/settings"
        android:icon="@drawable/nav_settings"
        />

</menu>