<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">

    <EditText
        android:id="@+id/casinoName_field"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="text"
        android:maxLength="100"
        android:hint="@string/prompt_casino_name" />


    <EditText
        android:id="@+id/casinoBalance_field"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/prompt_casino_balance"
        android:inputType="number"
        android:maxLength="9" />

    <EditText
        android:id="@+id/casinoPassword_field"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="number"
        android:maxLength="4" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_register"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="50dp"
        />
</LinearLayout>