<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textCapSentences"
            android:hint="@string/prompt_player_name"
            android:id="@+id/nameView">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24sp"
        android:id="@+id/balanceViewLayout"
        android:layout_marginEnd="24sp"
        android:layout_marginTop="100dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/balanceView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/prompt_player_start_balance"
            android:maxLength="10"
            android:text="">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp"
        android:layout_marginTop="190dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4"
            android:hint="@string/prompt_password"
            android:text="">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>
</RelativeLayout>