<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.SettingsFragment">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/title_games_list" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/games_list"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/add_game_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/action_add_game" />

            <View
                android:layout_width="wrap_content"
                android:background="@drawable/separator_line"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                android:layout_height="1dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/comission_field"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"

                    android:maxLength="3"
                    android:hint="@string/prompt_comission"
                    >

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:layout_width="wrap_content"
                android:background="@drawable/separator_line"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                android:layout_height="1dp" />

            <androidx.cardview.widget.CardView
                android:layout_marginTop="20dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_launcher_background" />

            </androidx.cardview.widget.CardView>



        </LinearLayout>




    </ScrollView>



</LinearLayout>